--- a/src/app/modules/patient/my-appointments/my-appointments.component.html
+++ b/src/app/modules/patient/my-appointments/my-appointments.component.html
@@ -106,7 +106,10 @@
                 <div class="flex-1 min-w-0">
                   <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-2">
                     <h3 class="text-lg font-medium text-slate-800">{{ visit.medicalArea }}</h3>
-                    
+                    <p class="flex items-center text-blue-700 font-medium mt-1">
+                      
+                      {{ hospitalName }} <span class="text-slate-500 font-normal ml-2">({{ hospitalAddress }})</span>
+                    </p>
                   </div>
                   
                   <div class="space-y-1 text-sm text-slate-600">
@@ -171,7 +174,10 @@
                 <div class="flex-1 min-w-0">
                   <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-2">
                     <h3 class="text-lg font-medium text-slate-800">{{ visit.medicalArea }}</h3>
-                   
+                    <p class="flex items-center text-blue-700 font-medium mt-1">
+                      
+                      {{ hospitalName }} <span class="text-slate-500 font-normal ml-2">({{ hospitalAddress }})</span>
+                    </p>
                   </div>
                   
                   <div class="space-y-1 text-sm text-slate-600">
